# tkmap

./: .gitignore  README.md  pyproject.toml  tkmap_demo.py  tkmap_minimal.py
.github/workflows/: build.yml  pypi.yml
tests/: test_map_widget.py  test_model.py  test_tileloaders.py  test_viewport.py
tkmap/: __init__.py  events.py  map_widget.py  model.py  projection.py  viewport.py
tkmap/concurrency/: __init__.py
tkmap/layers/: __init__.py  geojson.py  layer.py  tile.py
tkmap/tileloaders/: __init__.py  base.py  default.py  disk_cache.py  error_cache.py  logging_tile_loader.py  memory_cache.py  remote.py
