[project]
name = "tkmap"
version = "0.1.0"
description = ""
authors = [
    {name = "Curtis Ruck",email = "curtis@users.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow (>=11.2.1,<12.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
pytest = "^8.4.0"
pytest-xdist = "^3.7.0"

[tool.ruff.lint]
select = ["E", "F", "W", "C", "Q", "I"]
ignore = ["W293"]